--- a/Source/Editor/imgui.ini
+++ b/Source/Editor/imgui.ini
@@ -9,12 +9,14 @@ Size=191,501
 Collapsed=0
 
 [Window][Viewport]
-Pos=75,48
-Size=646,493
+Pos=371,26
+Size=1304,1019
 Collapsed=0
+DockId=0x00000006,0
 
 [Window][DockSpace Demo]
-Size=1072,844
+Pos=0,0
+Size=1675,1045
 Collapsed=0
 
 [Window][Example: Console]
@@ -23,5 +25,30 @@ ViewportId=0x46B5E99C
 Size=520,600
 Collapsed=0
 
+[Window][Stats]
+Pos=0,26
+Size=369,505
+Collapsed=0
+DockId=0x00000004,0
+
+[Window][Settings]
+Pos=0,533
+Size=369,512
+Collapsed=0
+DockId=0x00000005,0
+
+[Window][##toolbar]
+Pos=2190,19
+Size=370,1350
+Collapsed=0
+DockId=0x00000007,0
+
 [Docking][Data]
+DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=379,201 Size=1675,1019 Split=X Selected=0x13926F0B
+  DockNode    ID=0x00000002 Parent=0x3BC79352 SizeRef=369,874 Split=Y Selected=0x54723243
+    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=369,433 Selected=0x2E4EBCAA
+    DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=369,439 Selected=0x54723243
+  DockNode    ID=0x00000003 Parent=0x3BC79352 SizeRef=1229,874 Split=X
+    DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=2188,581 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
+    DockNode  ID=0x00000007 Parent=0x00000003 SizeRef=370,581 Selected=0xF0F70764
 
