--- a/Source/Editor/imgui.ini
+++ b/Source/Editor/imgui.ini
@@ -9,8 +9,8 @@ Size=191,501
 Collapsed=0
 
 [Window][Viewport]
-Pos=372,26
-Size=1228,874
+Pos=372,28
+Size=1228,872
 Collapsed=0
 DockId=0x00000006,0
 
@@ -26,16 +26,16 @@ Size=520,600
 Collapsed=0
 
 [Window][Stats]
-Pos=0,26
-Size=370,433
+Pos=0,28
+Size=370,457
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000001,0
 
 [Window][Settings]
-Pos=0,461
-Size=370,439
+Pos=0,487
+Size=370,413
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000004,0
 
 [Window][##toolbar]
 Pos=2190,19
@@ -44,11 +44,11 @@ Collapsed=0
 DockId=0x00000007,0
 
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=480,296 Size=1600,874 Split=X Selected=0x13926F0B
-  DockNode    ID=0x00000002 Parent=0x3BC79352 SizeRef=370,874 Split=Y Selected=0x54723243
-    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=369,433 Selected=0x2E4EBCAA
-    DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=369,439 Selected=0x54723243
-  DockNode    ID=0x00000003 Parent=0x3BC79352 SizeRef=1416,874 Split=X
+DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=480,298 Size=1600,872 Split=X Selected=0x13926F0B
+  DockNode    ID=0x00000002 Parent=0x3BC79352 SizeRef=370,874 Split=Y Selected=0x2E4EBCAA
+    DockNode  ID=0x00000001 Parent=0x00000002 SizeRef=370,457 Selected=0x2E4EBCAA
+    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=370,413 Selected=0x54723243
+  DockNode    ID=0x00000003 Parent=0x3BC79352 SizeRef=987,874 Split=X
     DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=2188,581 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
     DockNode  ID=0x00000007 Parent=0x00000003 SizeRef=370,581 Selected=0xF0F70764
 
