--- a/Source/Editor/imgui.ini
+++ b/Source/Editor/imgui.ini
@@ -1,54 +1,51 @@
-[Window][Debug##Default]
-Pos=60,60
-Size=400,400
-Collapsed=0
-
-[Window][Dear ImGui Demo]
-Pos=606,45
-Size=191,501
-Collapsed=0
-
-[Window][Viewport]
-Pos=372,28
-Size=1228,872
-Collapsed=0
-DockId=0x00000006,0
-
 [Window][DockSpace Demo]
 Pos=0,0
 Size=1600,900
 Collapsed=0
 
-[Window][Example: Console]
-ViewportPos=656,576
-ViewportId=0x46B5E99C
-Size=520,600
+[Window][Debug##Default]
+Pos=60,60
+Size=400,400
 Collapsed=0
 
-[Window][Stats]
-Pos=0,28
-Size=370,457
+[Window][Hierarchy Panel]
+Pos=1230,28
+Size=370,551
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000002,0
+
+[Window][Properties]
+Pos=1230,581
+Size=370,319
+Collapsed=0
+DockId=0x00000003,0
 
 [Window][Settings]
-Pos=0,487
-Size=370,413
+Pos=0,466
+Size=370,434
+Collapsed=0
+DockId=0x00000008,0
+
+[Window][Viewport]
+Pos=372,28
+Size=856,872
 Collapsed=0
 DockId=0x00000004,0
 
-[Window][##toolbar]
-Pos=2190,19
-Size=370,1350
+[Window][Stats]
+Pos=0,28
+Size=370,436
 Collapsed=0
 DockId=0x00000007,0
 
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=480,298 Size=1600,872 Split=X Selected=0x13926F0B
-  DockNode    ID=0x00000002 Parent=0x3BC79352 SizeRef=370,874 Split=Y Selected=0x2E4EBCAA
-    DockNode  ID=0x00000001 Parent=0x00000002 SizeRef=370,457 Selected=0x2E4EBCAA
-    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=370,413 Selected=0x54723243
-  DockNode    ID=0x00000003 Parent=0x3BC79352 SizeRef=987,874 Split=X
-    DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=2188,581 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
-    DockNode  ID=0x00000007 Parent=0x00000003 SizeRef=370,581 Selected=0xF0F70764
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=480,298 Size=1600,872 Split=X Selected=0x13926F0B
+  DockNode      ID=0x00000005 Parent=0x3BC79352 SizeRef=370,872 Split=Y Selected=0x2E4EBCAA
+    DockNode    ID=0x00000007 Parent=0x00000005 SizeRef=369,436 Selected=0x2E4EBCAA
+    DockNode    ID=0x00000008 Parent=0x00000005 SizeRef=369,434 Selected=0x54723243
+  DockNode      ID=0x00000006 Parent=0x3BC79352 SizeRef=1304,872 Split=X
+    DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=932,872 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
+    DockNode    ID=0x00000001 Parent=0x00000006 SizeRef=370,872 Split=Y Selected=0x199AB496
+      DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=370,551 Selected=0xE096E5AE
+      DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=370,319 Selected=0x199AB496
 
