--- a/Source/Editor/imgui.ini
+++ b/Source/Editor/imgui.ini
@@ -10,42 +10,214 @@ Collapsed=0
 
 [Window][Hierarchy Panel]
 Pos=1230,28
-Size=370,551
-Collapsed=0
-DockId=0x00000002,0
-
-[Window][Properties]
-Pos=1230,581
-Size=370,319
+Size=370,431
 Collapsed=0
 DockId=0x00000003,0
 
+[Window][Properties]
+Pos=1230,461
+Size=370,439
+Collapsed=0
+DockId=0x00000004,0
+
 [Window][Settings]
 Pos=0,466
-Size=370,434
+Size=388,434
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Viewport]
-Pos=372,28
-Size=856,872
+Pos=390,28
+Size=838,872
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000006,0
 
 [Window][Stats]
 Pos=0,28
-Size=370,436
+Size=388,436
 Collapsed=0
 DockId=0x00000007,0
 
+[Window][Dear ImGui Demo]
+ViewportPos=598,475
+ViewportId=0xE927CF2F
+Size=745,789
+Collapsed=0
+
+[Window][Dear ImGui Metrics/Debugger]
+Pos=123,183
+Size=342,471
+Collapsed=0
+
+[Window][Example: Custom rendering]
+ViewportPos=755,622
+ViewportId=0x3AC84485
+Size=523,497
+Collapsed=0
+
+[Window][Dear ImGui ID Stack Tool]
+Pos=276,299
+Size=349,160
+Collapsed=0
+
+[Window][Example: Simple layout]
+ViewportPos=911,609
+ViewportId=0x32FFF4A6
+Size=798,508
+Collapsed=0
+
+[Window][Example: Simple layout/left pane_AED60EF8]
+IsChild=1
+Size=150,446
+
+[Window][Example: Property editor]
+Pos=139,168
+Size=430,450
+Collapsed=0
+
+[Window][Dear ImGui Demo/ResizableChild_D5443E47]
+IsChild=1
+Size=713,184
+
+[Window][Dear ImGui Demo/Red_1D4E05CE]
+IsChild=1
+Size=200,100
+
+[Window][Example: Console]
+Pos=60,60
+Size=520,600
+Collapsed=0
+
+[Window][Example: Log]
+ViewportPos=915,628
+ViewportId=0xBF126D42
+Size=779,395
+Collapsed=0
+
+[Window][Title]
+Pos=798,126
+Size=471,97
+Collapsed=0
+
+[Window][Dear ImGui Style Editor]
+ViewportPos=540,330
+ViewportId=0x6D551092
+Size=660,1386
+Collapsed=0
+
+[Window][Example: Documents]
+ViewportPos=661,342
+ViewportId=0x1FD64BEB
+Size=672,1123
+Collapsed=0
+
+[Window][Dear ImGui Debug Log]
+Pos=474,507
+Size=694,240
+Collapsed=0
+
+[Table][0xC9935533,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x64418101,3]
+RefScale=20
+Column 0  Width=60
+Column 1  Width=60
+Column 2  Width=60
+
+[Table][0x47600645,3]
+RefScale=20
+Column 0  Width=61
+Column 1  Width=61
+Column 2  Weight=1.0000
+
+[Table][0xDE6957FF,6]
+RefScale=20
+Column 0  Width=61
+Column 1  Width=61
+Column 2  Width=-1
+Column 3  Weight=1.0000
+Column 4  Weight=1.0000
+Column 5  Weight=-1.0000
+
+[Table][0x861D378E,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x1F146634,3]
+RefScale=20
+Column 0  Width=61
+Column 1  Width=61
+Column 2  Width=61
+
+[Table][0x8DFA6E86,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xFABAAEF7,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xA43C3885,3]
+RefScale=20
+Column 0  Width=50
+Column 1  Width=50
+Column 2  Width=50
+
+[Table][0x49F8DCEA,3]
+RefScale=20
+Column 0  Weight=1.0000
+Column 1  Width=120
+Column 2  Width=180
+
+[Table][0x82CBB907,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x49D11DC0,3]
+RefScale=20
+Column 0  Width=70
+Column 1  Width=70
+Column 2  Width=70
+
+[Table][0x0919F5A2,14]
+RefScale=20
+Column 0  Width=58
+Column 1  Width=28
+Column 2  Width=28
+Column 3  Width=28
+Column 4  Width=28
+Column 5  Width=28
+Column 6  Width=28
+Column 7  Width=28
+Column 8  Width=28
+Column 9  Width=28
+Column 10 Width=28
+Column 11 Width=28
+Column 12 Width=28
+Column 13 Width=28
+
+[Table][0xE0773582,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0xD181190E,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
 [Docking][Data]
 DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=480,298 Size=1600,872 Split=X Selected=0x13926F0B
-  DockNode      ID=0x00000005 Parent=0x3BC79352 SizeRef=370,872 Split=Y Selected=0x2E4EBCAA
-    DockNode    ID=0x00000007 Parent=0x00000005 SizeRef=369,436 Selected=0x2E4EBCAA
-    DockNode    ID=0x00000008 Parent=0x00000005 SizeRef=369,434 Selected=0x54723243
-  DockNode      ID=0x00000006 Parent=0x3BC79352 SizeRef=1304,872 Split=X
-    DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=932,872 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
-    DockNode    ID=0x00000001 Parent=0x00000006 SizeRef=370,872 Split=Y Selected=0x199AB496
-      DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=370,551 Selected=0xE096E5AE
-      DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=370,319 Selected=0x199AB496
+  DockNode      ID=0x00000001 Parent=0x3BC79352 SizeRef=1228,872 Split=X
+    DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=388,872 Split=Y Selected=0x2E4EBCAA
+      DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=369,436 Selected=0x2E4EBCAA
+      DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=369,434 Selected=0x54723243
+    DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=838,872 CentralNode=1 Selected=0x13926F0B
+  DockNode      ID=0x00000002 Parent=0x3BC79352 SizeRef=370,872 Split=Y Selected=0x199AB496
+    DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=454,431 Selected=0xE096E5AE
+    DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=454,439 Selected=0x199AB496
 
