Object Picking using Object ID color Attachment

--- a/Source/Editor/imgui.ini
+++ b/Source/Editor/imgui.ini
@@ -22,19 +22,19 @@ DockId=0x00000004,0
 
 [Window][Settings]
 Pos=0,466
-Size=388,434
+Size=370,434
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Viewport]
-Pos=390,28
-Size=838,872
+Pos=372,28
+Size=856,872
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Stats]
 Pos=0,28
-Size=388,436
+Size=370,436
 Collapsed=0
 DockId=0x00000007,0
 
@@ -213,10 +213,10 @@ Column 1  Weight=1.0000
 [Docking][Data]
 DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=480,298 Size=1600,872 Split=X Selected=0x13926F0B
   DockNode      ID=0x00000001 Parent=0x3BC79352 SizeRef=1228,872 Split=X
-    DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=388,872 Split=Y Selected=0x2E4EBCAA
+    DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=370,872 Split=Y Selected=0x2E4EBCAA
       DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=369,436 Selected=0x2E4EBCAA
       DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=369,434 Selected=0x54723243
-    DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=838,872 CentralNode=1 Selected=0x13926F0B
+    DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=856,872 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
   DockNode      ID=0x00000002 Parent=0x3BC79352 SizeRef=370,872 Split=Y Selected=0x199AB496
     DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=454,431 Selected=0xE096E5AE
     DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=454,439 Selected=0x199AB496
